--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v2
+      - name: Setup VSDev
+        uses: egor-tensin/setup-vsdev@v1
+        with:
+          arch: x64
       - name: Build with MSVC
         run: |
           cd curl-shim
