Remove VSDev setup step from build workflow and trigger build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Setup VSDev
-        uses: egor-tensin/setup-vsdev@v1
-        with:
-          arch: x64
       - name: Build with MSVC
         run: |
-          cd curl-shim
+          cd curl-shim && \
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" && \
           cl main.c /Fe:curl-shim.exe
         shell: cmd
       - name: Upload artifact
