--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Build with MSVC
         run: |
-          cd curl-shim && \
-          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" && \
+          cd curl-shim
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           cl main.c /Fe:curl-shim.exe
         shell: cmd
       - name: Upload artifact
